# maxdown

./: .vimrc.develop  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: build.yml  update.yml
examples/: alerts.md  basic.md  blockquotes.md  convert.md  error.md  fixture.md  help.md  read-stdin.stdin  read-stdin.stdout  read-stdin.toml  stdin.stdout  write-file.toml
examples/basic.in/: template.html
examples/blockquotes.in/: caution.md  important.md  note.md  tip.md  warning.md
examples/output.in/: input.md
examples/output.out/: output.html
examples/write-file.out/: output.html
plugin/: maxdown.vim
script/: get-github-markdown-css  update-css  update-preview-template
src/: default-template.html  default.html  github.css  io.rs  lib.rs  main.rs  markdown.rs  minimal-template.html  preview-template.html  template.rs
templates/: default-template.html  preview-template-template.html  preview-template.html
tests/: trycmd.rs
tests/cmd/: help.md
web/: index.html
