[package]
name = "maxdown"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at
# https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.98", features = ["std"] }
clap = { version = "4.5.40", features = ["derive"] }
markdown = "1.0.0"

[dev-dependencies]
trycmd = "0.15.9"
