[package]
name = "maxdown"
version = "1.0.0"
edition = "2024"

# See more keys and their definitions at
# https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.100", features = ["std"] }
clap = { version = "4.5.53", features = ["derive"] }
markdown = { version = "1.0.0", features = [], default-features = false }
minijinja = { version = "2.14.0", features = ["debug", "serde"], default-features = false }

[dev-dependencies]
trycmd = "0.15.11"
